set background colour to edges, fixed gap between cards

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,10 @@
 }
 
 body{
-    margin: 0 auto;
-    max-width: 1200px;
     color: #222;
+    margin:0;
 }
-/* section{
-    padding: 20px 0;
-} */
+
 img{
     width: 100%;
 }
@@ -18,8 +15,7 @@ img{
 h1{
     margin-top: 0;
     font-size: 2.027rem;
-    font-weight: 500;
-    
+    font-weight: 500;   
 }
 
 h2{
@@ -42,6 +38,10 @@ a{
     font-size: 1rem;
 }
 
+.width{
+    margin: 0 auto;
+    max-width: 1200px;
+}
 header div{
     padding: 0 20px;
     display: flex;
@@ -100,12 +100,7 @@ nav ul li{
 #limited{
     text-transform: uppercase;
     font-weight: 700;
-}
-
-.no-margin{
-    margin: 0;
-    padding: 0;
-}
+}   
 
 #sweetheart a:link, #sweetheart a:visited{
     background-color: #000;
@@ -153,11 +148,10 @@ blockquote{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;  
+    gap:10px;
 }
 .card{
     background-color: #f8fafc;
-    margin: 5px;
-    margin-bottom: 10px;
     border-radius: 5px;
 }
 
